- Fixed so the edit on sight scripts are referenced fully
- Added disable languages to export/import
- Fixed so one can see when and by who when in submit to publish screen 
- Added modifyer to list of items up for publication
- Removed unneccesairy html/css and made it more strict / validated. Added more defeat browser cache tags as well in tools.

Changes:
- Success url not needed default in web.xml under the cms-application - removed it.
- Added webservices url
- More memory and less disk in OSCache configs - much faster and less errors.
- Upgraded to OS-Workflow 2.8 as well as the accompanying libs oscore and ospropertyset
- Fixed so only 20 references are shown at a time in structure/content
- Unpublish is allways shown on folders to enable mass unpublish
- Changed some api:s to throw exceptions
- Changed language derivation so a browser language is not choosen if the meta info is not there for that page
- Made it default so the working version of a deliver instance returns any error message as text in the site - for debug puposes. Can be turned off with the paratmeter disableTemplateDebug=true
- Added scripts for upgrade to 2.5
- Added FAQ entry of questios around oracle 10.2 XE

Bug fixes
- Fixed mapping bug on user/role properties mapping in deliver on oracle
- Fixed bug in content type definition cache not being updated in deliver
- Fixed a bug in security parameter handling
- Fixed bugs with disableEditOnSight and also made languageId a parameter to contentAttribute-tag
- Fixed visualization bug if long comments contains breaks
- Fixed issues with redirect addresses and also with portlet urls.
- Fixed so the flow works on access right
- Fixed bug in content version compare
- Added ordering on contentId - avoids duplicates some times
- Fixed so users access right are not removed if not wanted
- Made move change repository on all children as well - big bug otherwise
- Fixed bug when anonymous is logged in and portlets