@@ -112,6 +112,8 @@ Improvements
 - Fixed so one can see when and by who when in submit to publish screen 
 - Added modifyer to list of items up for publication
 - Removed unneccesairy html/css and made it more strict / validated. Added more defeat browser cache tags as well in tools.
+- Upgraded jtds till 1.2 and added new versions of db2 and oracle jdbc-drivers as well.
+- Made it possible to state direct publication when creating contents through webservice from deliver.
 
 Changes:
 - Success url not needed default in web.xml under the cms-application - removed it.
